# civicutility

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE-CODE  LICENSE-DOCS  MILESTONE_0_7_DONE.md  PRODUCTION_DEPTH_UTILITY_WORKPAPER_PERSISTENCE_DONE.md  README.md  README.txt  SECURITY.md  SUPPORT.md  USER-MANUAL.md  USER-MANUAL.txt  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: verify.yml
civicutility/: __init__.py  account.py  arrangements.py  main.py  persistence.py  policy.py  public_ui.py  service_requests.py
docs/: IMPLEMENTATION_PLAN.md  MILESTONES.md  RECONCILIATION.md  architecture.md  browser-qa-civicutility-v0.1.1-alignment-summary.md  browser-qa-production-depth-utility-workpaper-persistence-summary.md  browser-qa-summary.md  github-discussions-seed.md  index.html
scripts/: check-civiccore-placeholder-imports.py  verify-docs.sh  verify-release.sh
tests/: test_civicutility_foundation.py  test_production_depth_utility_persistence.py  test_runtime_foundation.py
